--- a/tests/001/tests.aal.template
+++ b/tests/001/tests.aal.template
@@ -1,16 +1,25 @@
 
 ## The agent implementation and addressing information 
 agents:
+
   bb_agent:
     group: bb_group
     path: /users/[[DETER_USER]]/DETERLabTesting/tests/001/agents/bb.tar.gz
     execargs: []
 
+  peers_agent:
+    group: peers_group
+    path: /users/[[DETER_USER]]/DETERLabTesting/tests/001/agents/peers.tar.gz
+    execargs: []
+
 ## The mapping from the AAL procedure to the experiment apparatus 
 groups:
+
   bb_group: [bb]
 
-streamstarts: [ main, cleanup ]
+  peers_group: [aa, cc, dd]
+
+streamstarts: [main, peers, cleanup]
 
 eventstreams:
 
@@ -25,6 +34,9 @@ eventstreams:
 
       - type: trigger
         triggers: [{event: config_done, agent: bb_agent}]
+      
+      - type: trigger
+        triggers: [{event: iperf_started}]
 
       - type: event
         agent: bb_agent 
@@ -32,10 +44,26 @@ eventstreams:
         trigger: test001_complete
         args: {}
 
+  peers:
+
+      - type: event
+        agent: peers_agent 
+        method: start_iperf
+        trigger: iperf_started
+        args: {}
+      
+      - type: trigger
+        triggers: [{event: test001_complete}]
+      
+      - type: event
+        agent: peers_agent 
+        method: stop_iperf
+        trigger: iperf_stopped
+        args: {}
 
   cleanup:
       - type: trigger
-        triggers: [ {event: test001_complete, target: exit} ] 
+        triggers: [ {event: iperf_stopped, target: exit} ] 
 
 
 ################################################
