--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 tests/001/agents/*.tar.gz
 tests/001/tests.aal
+tests/001-containers/agents/*.tar.gz
+tests/001-containers/tests.aal
 tests/002/agents/*.tar.gz
 tests/002/tests.aal
 
